profilelist1exp/unpackaged/objects/Partner_Contract__c.object
<CustomObject>
    <description>Created as part of Services module of PAM project</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Account Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Contract</relationshipLabel>
        <relationshipName>Partner_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Document_Type__c</fullName>
        <description>Contract Type</description>
        <label>Contract Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Deployment Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>start date of the contract</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>Status of the offline contract created</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Non-Renewal</fullName>
                </value>
                <value>
                    <fullName>Pending Signature</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Superceded</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Reseller_Evergreen_Contract__c</fullName>
        <description>Evergreen contract or not</description>
        <label>Distributor/Reseller Evergreen Contract?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type_Details__c</fullName>
        <description>Sub contract type</description>
        <label>Document Type Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Document_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Co-Delivery Agreement</fullName>
                </value>
                <value>
                    <fullName>Consulting Partner Program Agreement</fullName>
                </value>
                <value>
                    <fullName>Deployment Partner Program Agreement</fullName>
                </value>
                <value>
                    <fullName>EBPP for Services (Implement) Agreement</fullName>
                    <isActive>false</isActive>
                    <label>EBPP for Services (Implement) Agreement</label>
                </value>
                <value>
                    <fullName>Subcontracting agreement</fullName>
                </value>
                <value>
                    <fullName>Support Partner Program Agreement</fullName>
                </value>
                <value>
                    <fullName>VSI Agreement</fullName>
                    <isActive>false</isActive>
                    <label>VSI Agreement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Track_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Partner_Track__r.Id , Partner_Track__r.Partner_Track_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Track Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Track</label>
        <referenceTo>Partner_Track__c</referenceTo>
        <relationshipLabel>Partner Contract</relationshipLabel>
        <relationshipName>Partner_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of contract. Defaulted to Draft</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Activated</fullName>
                    <isActive>false</isActive>
                    <label>Activated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Contract</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Partner Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Contract</pluralLabel>
    <recordTypes>
        <fullName>Contract_Partner_Track_RT</fullName>
        <active>true</active>
        <description>Partner Contract record type</description>
        <label>Contract_Partner_Track_RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>